--- a/Ejercicios/Net/assets/css/app.css
+++ b/Ejercicios/Net/assets/css/app.css
@@ -33,6 +33,158 @@ body {
     background-position: -20px -120px;
 }
 
+.container {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-areas: 'area-1 area-2';
+    gap: 0.3125rem;
+    justify-content: center;
+    align-content: center;
+
+}
+
+.main__index-2 {
+    width: 9rem;
+    height: 100%;
+    background-color: #c7e78f;
+    grid-area: area-2;
+    border: 1px solid #222222;
+    border-radius: 1.25rem;
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+    margin-left: 1.25rem;
+
+
+}
+
+.index-2__link {
+    width: 100%;
+    height: auto;
+    color: var(--color-title);
+    font-size: 1rem;
+    margin: 0 auto;
+    text-align: center;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: solid;
+    cursor: pointer;
+}
+
+.index__box-1 {
+    width: 100%;
+    height: 6.25rem;
+    margin: 0 auto;
+    background-color: #665e8a;
+    color: var(--color-title);
+    font-size: 1rem;
+    margin: 0 auto;
+    border: 1px solid #222222;
+    border-radius: 0.625rem;
+    font-weight: 600;
+    margin-bottom: 1.25rem;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.index__box-2 {
+    width: 100%;
+    height: 6.25rem;
+    color: var(--color-text);
+    font-size: 1rem;
+    margin: 0 auto;
+    text-align: center;
+    align-content: center;
+    border: 1px solid #222222;
+    border-radius: 0.625rem;
+    font-weight: 600;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    padding: 0.125rem;
+    display: grid;
+    grid-template-areas:
+        'box-1 box-2'
+    ;
+    grid-template-columns: 50% 50%;
+    overflow: hidden;
+
+}
+
+.box-2__box-1 {
+    width: 100%;
+    height: 5.9375rem;
+    background-color: #cdea35;
+    grid-area: box-1;
+    border: 1px solid #222222;
+    border-radius: 0.3125rem;
+    margin-right: 2px;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.box-2__box-2 {
+    width: 100%;
+    height: 5.9375rem;
+    background-color: #cdea35;
+    grid-area: box-2;
+    border: 1px solid #222222;
+    border-radius: 0.3125rem;
+    margin-left: 2px;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.index__box-3 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 1rem;
+}
+
+.box-3__box-1,
+.box-3__box-2,
+.box-3__box-3,
+.box-3__box-4 {
+    width: 100%;
+    height: 6.25rem;
+    border: 1px solid #222222;
+    border-radius: 0.625rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-3__box-1 {
+    background-color: #d9de68;
+}
+
+.box-3__box-2 {
+    background-color: #d8dd4a;
+}
+
+.box-3__box-3 {
+    background-color: #dcca85;
+}
+
+.box-3__box-4 {
+    background-color: #c6c6cb;
+}
+
 /* Encabezado */
 
 .container-head {
@@ -46,10 +198,26 @@ body {
     font-size: 1.25rem;
 }
 
+.main__index {
+    width: 50rem;
+    height: auto;
+    font-family: 'Poppins ,sans-serif , Helvetica';
+    background-color: var(--color-background);
+    color: var(--color-text);
+    font-size: 1rem;
+    margin: 0 auto;
+    border: 1px solid #222222;
+    border-radius: 1.25rem;
+    padding: 1.875rem 1.875rem 0;
+    box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
+    grid-area: area-1;
+
+
+}
+
 .container-head__nav {
     display: flex;
     justify-content: space-between;
-
     max-width: 62rem;
     margin: 0 auto;
 
@@ -61,6 +229,9 @@ body {
     font-weight: bold;
     padding: 0 40px;
     line-height: 5rem;
+    color: var(--color-principal);
+    text-shadow: 1px 1px 4px #b3b5b6;
+
 }
 
 .nav__list {
@@ -97,15 +268,107 @@ body {
     font-size: 2rem;
     padding: 0 1.25rem;
     line-height: 3.75rem;
-
     display: none;
     cursor: pointer;
 
 }
 
-/*Responsive header */
+
+/* Estilos pagina de contenidos */
+
+.main_content {
+    width: 100%;
+    height: auto;
+    font-family: 'Poppins ,sans-serif , Helvetica';
+    background-color: var(--color-background);
+    color: var(--color-text);
+    font-size: 1rem;
+    margin: 0 auto;
+    padding: 1.875rem 1.875rem 0;
+    margin-top: 1rem;
+    margin-bottom: 5rem;
+
+}
+
+
+.content_box {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box_content {
+    width: 80%;
+    height: auto;
+    border: 1px solid #222222;
+    border-radius: 0.625rem;
+    box-shadow: 1px 1px 4px #b3b5b6;
+    margin-top: 0.75rem;
+}
+
+.box__title {
+    width: 100%;
+    font-size: 2rem;
+    color: #222222;
+    text-align: center;
+}
+
+.box__subtitle {
+    width: 100%;
+    font-size: 1.2rem;
+    color: #222222;
+    text-align: center;
+    
+
+
+}
+
+.box__text {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.25rem;
+
+}
+
+.box__video {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.9375rem;
+    margin-bottom: 0.9375rem;
+
+}
+
+.box-content-1 {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+@media (max-width: 1024px) {
+    html {
+        font-size: 12px;
+    }
+}
+
 
 @media (max-width: 768px) {
+    html {
+        font-size: 10px;
+    }
+
     body {
         padding-top: 4.375rem;
 
@@ -124,6 +387,7 @@ body {
         font-weight: bold;
         padding: 0 20px;
         line-height: 3.75rem;
+        text-shadow: 1px 1px 4px #b3b5b6;
     }
 
     .nav__list {
@@ -135,11 +399,9 @@ body {
         margin-right: 1.25rem;
         background-color: var(--color-subtitle);
         position: fixed;
-        left: 0;
         top: 3.75rem;
         width: 100%;
         padding: 1.25rem 0;
-
         left: 100%;
         transition: left 0.3s;
 
@@ -163,6 +425,18 @@ body {
 
     .nav__list_visible {
         left: 0;
+    }
+}
+
+@media (max-width: 660px) {
+    html {
+        font-size: 8px;
+    }
+}
+
+@media (max-width: 512px) {
+    html {
+        font-size: 6px;
     }
 }
 
@@ -235,7 +509,8 @@ body {
     margin-top: 1.25rem;
 
 }
-.intro__list li{
+
+.intro__list li {
     list-style: circle;
     margin-bottom: 1rem;
     font-size: 1rem;
@@ -246,7 +521,7 @@ body {
 
 }
 
-.main__video{
+.main__video {
     width: 100%;
     height: auto;
     margin: 0.625rem;
@@ -264,18 +539,20 @@ body {
     margin-top: 1.25rem;
     box-shadow: 0 0 10rem -0.5rem rgba(0, 0, 0, 0.5);
     transition: transform 0.5s;
-    
+
 }
-.video__titulo{
+
+.video__titulo {
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 1.25rem;
     line-height: 1.2;
     text-align: center;
     margin-top: 1.25rem;
-    
+
 }
-.video__container{
+
+.video__container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -288,6 +565,7 @@ body {
     .footer {
         font-size: 10px;
     }
+
     .main__img-main {
         width: 100%;
         height: 0;
